[project]
name = "roversimulatorfire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "matplotlib~=3.9",
    "numpy~=1.26",
    "psy-taliro~=1.0",
    "scipy~=1.11",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
